CSS Grid Tutorial #3 - Rows

--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
     <div id="content">
       <div>1</div>
       <div>2</div>
-      <div>3</div>
+      <div>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit
+        doloremque quidem vitae eaque sit magni, esse maiores veniam culpa
+        molestias consequuntur blanditiis ipsam illum minus beatae, fuga
+        accusamus magnam? Ipsum. Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Possimus exercitationem suscipit magni, veritatis quae
+        nemo molestiae accusamus vitae! Praesentium sapiente iste, tempora
+        impedit facilis rem autem sint? Dolore, natus excepturi.
+      </div>
       <div>4</div>
       <div>5</div>
       <div>6</div>
