--- a/index.html
+++ b/index.html
@@ -10,23 +10,12 @@
   </head>
   <body>
     <div id="content">
-      <div>1</div>
-      <div>2</div>
-      <div>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit
-        doloremque quidem vitae eaque sit magni, esse maiores veniam culpa
-        molestias consequuntur blanditiis ipsam illum minus beatae, fuga
-        accusamus magnam? Ipsum. Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Possimus exercitationem suscipit magni, veritatis quae
-        nemo molestiae accusamus vitae! Praesentium sapiente iste, tempora
-        impedit facilis rem autem sint? Dolore, natus excepturi.
-      </div>
-      <div>4</div>
-      <div>5</div>
-      <div>6</div>
-      <div>7</div>
-      <div>8</div>
-      <div>9</div>
+      <div class="one">1</div>
+      <div class="two">2</div>
+      <div class="three">3</div>
+      <div class="four">4</div>
+      <div class="five">5</div>
+      <div class="six">6</div>
     </div>
   </body>
 </html>
